Add colors to card data reflecting data range, update margin in header, add conditinoal styling classes to datapoints

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -19,6 +19,14 @@
   width: 70%;
 }
 
-.data-card ul {
+.data-card li {
+  font-weight: bold;
+}
 
+.red {
+  color: #D62C2C;
+}
+
+.blue {
+  color: #204298;
 }
