--- a/src/components/CompareCard/CompareCard.css
+++ b/src/components/CompareCard/CompareCard.css
@@ -11,11 +11,11 @@
 .compare-card h3 {
   font-size: 18px;
   font-weight: bold;
-  margin: 15px auto 10px;
+  margin: 15px 15px 10px;
 }
 
 .compare-card h4 {
   font-size: 22px;
   font-weight: bold;
-  margin: 15px 0 10px;
+  margin: 15px 15px 10px;
 }
