--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -8,6 +8,10 @@
   align-items: center;
 }
 
+.data-card:hover {
+  cursor: pointer;
+}
+
 .data-card h5 {
   border-bottom: 1px solid #d2d2d2;
   font-family: Helvetica;
