--- a/src/components/CompareDisplay/CompareDisplay.css
+++ b/src/components/CompareDisplay/CompareDisplay.css
@@ -1,4 +1,13 @@
 .compare-display {
   display: flex;
   justify-content: space-around;
+  margin: 20px auto;
+  max-width: 786px;
+}
+
+.compare-container {
+  display: flex;
+  justify-content: center;
+  min-width: 250px;
+  width: 33.33%;
 }
