--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -27,6 +27,12 @@
   font-weight: bold;
 }
 
+.data-card i {
+  font-size: 12px;
+  color: #204298;
+  margin-left: 5px;
+}
+
 .highlight {
   box-shadow: 0 0 1px 1px red;
 }
